Fix the position of the header guide array - shown when there are no registered endpoints (and some incoming scenarios) - position is determined by location of associated button in header - position of button can change given visibility of other buttons (notification bell, endpoint backup, etc) - now check positiion after a delay, add fade in to mask delay

--- a/src/frontend/packages/core/src/shared/components/no-content-message/no-content-message.component.scss
+++ b/src/frontend/packages/core/src/shared/components/no-content-message/no-content-message.component.scss
@@ -26,6 +26,7 @@
   }
   &__link {
     display: flex;
+    opacity: 0%;
     position: absolute;
     right: 113px;
     top: 54px;
@@ -38,6 +39,10 @@
     &-text {
       font-size: 16px;
       margin-top: 26px;
+    }
+    &--show {
+      opacity: 100%;
+      transition: opacity .6s;
     }
   }
   &__menu {
